# NewDesk

./: .gitignore  LICENSE  README.md
apps/calculator/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.js
apps/calculator/src/: App.jsx  main.jsx
apps/default/: package-lock.json  vite.config.js
apps/default/src/: main.jsx
apps/tileset_map_builder/: package-lock.json  package.json  vite.config.js
apps/tileset_map_builder/src/: App.svelte
tauri-app/: apps.json  index.html  package-lock.json  package.json  vite.config.js
tauri-app/scripts/: addToAppRegistry.js  copyExternalApps.js
tauri-app/src/: .env  App.css  App.jsx  appRegistry.js  main.jsx
tauri-app/src-tauri/: .taurignore  2  Cargo.toml  tauri-exports.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/resources/data/: apps_manifest.json  projects.json
tauri-app/src-tauri/resources/data/desktop_data/: canvas.json  main-canvas.json  settings.json
tauri-app/src-tauri/src/: commands.rs  constants.rs  lib.rs  tauri_exports.rs
tauri-app/src-tauri/src/apps/: mod.rs
tauri-app/src-tauri/src/apps/desktop/: commands.rs
tauri-app/src-tauri/src/apps/file_manager/: commands.rs
tauri-app/src-tauri/src/apps/task_manager/: commands.rs
tauri-app/src/components/: backButton.jsx
tauri-app/src/pages/: chatBot.jsx  home.jsx  settings.jsx
tauri-app/src/permissions/: notificationCheck.jsx
tauri-app/src/utils/: addExternalApp.js  getApps.jsx  installApp.jsx  model.jsx  (+1 more)
templates/default/: package-lock.json  package.json  vite.config.js
(+22 files in other folders)
