[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["image-png", "devtools", "tray-icon"] }
tauri-plugin-opener = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = {version = "0.3.9", features = ["fileapi"] }
tauri-plugin-fs = "2"
walkdir = "2"
regex = "1"
fs_extra = "1.3.0"
tauri-plugin-updater = "2.8.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-notification = "2"
